src/main/java/com/example/demo/error/exception/NotFoundException.java
//package com.example.demo.error.exception;
//
//import com.example.demo.error.ErrorCode;
//
//public class NotFoundException extends BusinessException{
//    public NotFoundException(ErrorCode errorCode, String message) {
//        super(errorCode, message);
//    }
//}
